tests/paczka1/fuzzy1/98719055.err
Error in line 2: A940 A940 23,0
Error in line 1: a1pbCH S72 97,2
Error in line 7: A940 S72 20,1
Error in line 11: 8gKvfEN3CD A313 92,2
Error in line 25: ZZgRPwO6mGa A940 164,60
Error in line 24: 8gKvfEN3CD A940 48,2
Error in line 28: a1pbCH A766 34,8
Error in line 30: A940 A313 93,6
